# pico-tinyusb-i2s-speaker

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: board.cpp  board.h  board_config.h  i2s_audio.c  i2s_audio.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
